{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 38,
  "lineage": "8a95c6d9-35ac-69f9-1f00-5a74ebccdfb0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.32.10",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-05T04:23:17.368-08:00",
            "id": "projects/corded-shift-399205/regions/asia-south1/addresses/ipv4-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "corded-shift-399205",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/regions/asia-south1/addresses/ipv4-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/zones/asia-south1-a/instances/test-vm1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.131.233.96",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-05T04:46:33.995-08:00",
            "id": "projects/corded-shift-399205/regions/asia-south2/addresses/ipv4-address2",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ipv4-address2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "corded-shift-399205",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/regions/asia-south2/addresses/ipv4-address2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-12-05T04:11:26.954-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/corded-shift-399205/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network",
            "priority": 1000,
            "project": "corded-shift-399205",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/firewalls/allow-internal",
            "source_ranges": [
              "200.0.0.0/24",
              "200.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-05T04:12:56.476-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/corded-shift-399205/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network",
            "priority": 1000,
            "project": "corded-shift-399205",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "computevm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20231115",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/zones/asia-south1-a/disks/test-vm1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/corded-shift-399205/zones/asia-south1-a/instances/test-vm1",
            "instance_id": "4410563354624698214",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "la-AELBPAsg=",
            "name": "test-vm1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.32.10",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network",
                "network_ip": "200.0.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/regions/asia-south1/subnetworks/mumbai-subnet-1",
                "subnetwork_project": "corded-shift-399205"
              }
            ],
            "project": "corded-shift-399205",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/zones/asia-south1-a/instances/test-vm1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_address.static"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "computevm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20231115",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/zones/asia-south2-a/disks/test-vm2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/corded-shift-399205/zones/asia-south2-a/instances/test-vm2",
            "instance_id": "625574032900793665",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "la-AELBPAsg=",
            "name": "test-vm2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.131.233.96",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network",
                "network_ip": "200.0.2.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/regions/asia-south2/subnetworks/delhi-subnet",
                "subnetwork_project": "corded-shift-399205"
              }
            ],
            "project": "corded-shift-399205",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/zones/asia-south2-a/instances/test-vm2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south2-a"
          },
          "dependencies": [
            "google_compute_address.static2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "This is Testing Vpc",
            "enable_ula_internal_ipv6": false,
            "id": "projects/corded-shift-399205/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "corded-shift-399205",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "delhi-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-05T04:08:48.483-08:00",
            "gateway_address": "200.0.2.1",
            "id": "projects/corded-shift-399205/regions/asia-south2/subnetworks/delhi-subnet",
            "ip_cidr_range": "200.0.2.0/24",
            "name": "delhi-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "corded-shift-399205",
            "purpose": "PRIVATE",
            "region": "asia-south2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/regions/asia-south2/subnetworks/delhi-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.terraform_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mum-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-05T04:08:44.578-08:00",
            "gateway_address": "200.0.1.1",
            "id": "projects/corded-shift-399205/regions/asia-south1/subnetworks/mumbai-subnet-1",
            "ip_cidr_range": "200.0.1.0/24",
            "name": "mumbai-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "corded-shift-399205",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/corded-shift-399205/regions/asia-south1/subnetworks/mumbai-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.terraform_network"
          ]
        }
      ]
    }
  ]
}